# dashboard_tactics_pi

./: .codacy.yml  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md  SECURITY.md  VERSION.cmake  appveyor.yml  bld.bat
.circleci/: circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-mingw.sh  circleci-build-raspbian-armhf.sh  cloudsmith-upload.sh  config.yml  control
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.github/workflows/: codacy-analysis.yml  node.js.yml
OLD/: CMakeLists.txt.bak
buildosx/InstallOSX/: dashboard_pi.pkgproj.in  dashboard_tactics_pi.pkgproj.in
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake  ReadmeUbuntu18Build.txt  plugin_static_ids.h.in  postinst  postrm  version.h.in
cmake/icons/: makeico.ps1  (+1 more)
data/: engined1.html  engined1.js  engined2.html  engined2.js  enginedjg.README  enginedjg.css  enginedjg.html  enginedjg.js  justgage-1.3.3.min.js  raphael-2.2.8.min.js  streamin_sk_template.json  streamout_template.json  streamout_template_http.json
docs/: InfluxDBStreamer.html  InfluxDBStreamer.ipynb  InfluxDBStreamer.md  README.md  StreamingToDockerInfluxDB.html  StreamingToDockerInfluxDB.ipynb  StreamingToDockerInfluxDB.md  Tactics.md  tactics_pi.odt  vectornames.odg
instrujs/: .eslintrc.json
manual/: antora.yml  site.yml
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  dashboard_tactics_pi.pot  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: AddInstrumentDlg.cpp  AddInstrumentDlg.h  DashboardConfig.cpp  DashboardFunctions.cpp  DashboardFunctions.h  DashboardInstrumentContainer.cpp  DashboardInstrumentContainer.h  DashboardPreferencesDialog.cpp  DashboardPreferencesDialog.h  DashboardWindow.cpp  DashboardWindow.h  DashboardWindowContainer.h  DashboardWindowContainer.h.org  DoubleExpSmooth.cpp  DoubleExpSmooth.h  EngineDJG.cpp  EngineDJG.h  ExpSmooth.cpp  ExpSmooth.h  InstruJS.cpp  InstruJS.h  InstruJSfsm.dot  LineProtocol.h  Odograph.cpp  Odograph.h  Performance.cpp  Performance.h  PerformanceSingle.cpp  PerformanceSingle.h  Polar.cpp  Polar.h  PolarPerformance.cpp  PolarPerformance.h  RaceMark.cpp  RaceMark.h  RaceMarkGL.cpp  RaceStart.cpp  RaceStart.h  RaceStartGL.cpp  SkData.cpp  (+92 more)
tests/: CMakeLists.txt  test-01_DashboardFunctions.cpp  test-01_tactics_functions.cpp  test-01_xxx.cpp  test-02_SkData_class.cpp  test-02_TacticsFunctions.cpp  test-02_aaa.cpp  test-03_SkData.cpp  test_01-xxx.cpp  test_03-ppp.cpp  testmain.cpp
tests/integrated/: readme.txt
tests/integrated/tc105_InfluxDB_out/: opencpn.ini_tc105
tests/integrated/tc107_streamin_sk/: 2019-11-18_issue90_scarns_ruddertest.txt  2020-10-25_v2.0.0rc2_tcr952_SignalK-Only_Win_PASS.url
tests/integrated/tc107_streamin_sk/tc107_HDM-cut-for_forum/: tc107_HDM.txt
tests/integrated/tc108_twd_standstill/: 2020-09-24_v2.0.0rc3_tcr920_tc108_Win_PASS.url
tests/integrated/tc111 Race Start misuse angles/: tc111 Race Start misuse angles.desktop  tc111 Race Start misuse angles.url
tests/integrated/tc112_Race_Start_wind_shift_laylines/: tc112_Race_Start_wind_shift_laylines.desktop  tc112_Race_Start_wind_shift_laylines.url
tests/integrated/tc113_Race_Start_startline_waypoint_management/: tc113_startline_waypoint_management.desktop  tc113_startline_waypoint_management.url
tests/integrated/tc114_Race_Start_startline_information/: tc114_startline_information.url
tests/integrated/tc114_startline_information/: tc114_startline_information.desktop
tests/integrated/tc115_average_wind_short_and_long/: tc115_average_wind_short_and_long.desktop  tc115_average_wind_short_and_long.url
tests/integrated/tc116_Race_Mark_information/: 2020-08-02_Race_Mark_MyRace_WW-LW_route.gpx  2020-08-02_Race_Mark_MyRace_WW-LW_waypoints.gpx  tc116_Race_Mark_information.desktop  tc116_Race_Mark_information.url
tests/integrated/tc117_Race_Mark_laylines_and_ladder_rungs/: tc117_Race_Mark_laylines_and_ladder_rungs.desktop  tc117_Race_Mark_laylines_and_ladder_rungs.url
tests/integrated/tc118_LineChart_TimesTUI_InfluxDB2/: tc118_LineChart_TimesTUI_InfluxDB2.desktop  tc118_LineChart_TimesTUI_InfluxDB2.url
tests/integrated/tc47_twd_stw/: 2020-09-17_v2.0.0rc3_tc47_win_PASS.url
tests/integrated/tc48_twd/: 2020-09-17_v2.0.0rc3_tc48_Win_PASS.url
tests/integrated/tc49_time_history/: baro.csv  polar.csv  tc49.desktop  tc49.url  tw.csv
tests/integrated/tc50_leeway_stb_and_port/: 2020-09-22_v2.0.0rc3_tcr923_tc50_Win_PASS.url
tests/integrated/tc51_stw_correction/: 2020-09-22_v2.0.0rc3_tcr924_tc51_Win_PASS.url
tests/integrated/tc52_aw_corrections/: 2020-09-23_v2.0.0rc3_tcr925_tc52_Win_PASS.url
tests/integrated/tc53_current_calcs/: 2020-09-23_v2.0.0rc3_tcr926_tc53_Win_PASS.url
tests/integrated/tc54_laylines/: 2020-09-23_v2.0.0rc3_tcr927_tc54_Win_PASS.url
tests/integrated/tc55_noSTW_SOG_no_polar_-_TW/: tc55_noSTW-noVHW_no_polar_TW_v1-0.txt  tc55_noSTW_SOG_no_polar_-_TW_v1-0.txt
tests/integrated/tc57_twa_to_waypoint/: 2020-09-24_v2.0.0rc3_tcr928_tc57_Win_PASS.url
tests/integrated/tc58_polar_and_polar_speed/: 2020-09-24_v2.0.0rc3_tcr931_tc58_Win_PASS_Example-15-30-out.csv  2020-09-27_v2.0.0rc3_tcr930_tc58_Win_PASS.url
tests/integrated/tc59_cgm_polarindicators/: 2020-09-29_v2.0.0rc3_tcr931_tc59_Win_PASS.url
tests/integrated/ts_polaires/: Example-06-24-out.csv  Example-06-24-out.txt  Example-15-30-out.csv  Example-15-30-out.txt
tests/integrated/ts_polaires/issue50/: Example-15-30-out-no_row_avg.csv  Example-15-30-out.txt  Example-15-30-out_issue-csv.txt  Polar lookup table remains truncated with NaN lines below defined lowest TWA values · Issue #59 · canne_dashboard_tactics_pi.url
tests/integrated/ts_polaires/issue63/issue63after/: Example-06-24.csv
tests/integrated/ts_polaires/issue63/issue63before/: Example-06-24-out.txt
(+352 files in other folders)
